# neko

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
examples/osint/: get_discord_user.py
snippets/: LLL.sage
src/neko/: __init__.py
src/neko/algo/: sudoku.py
src/neko/crypto/: mersenne_twister.py
src/neko/forensics/: binwalk_utils.py  png.py
src/neko/osint/: discord.py
src/neko/rev/: dis_utils.py  png.py
src/neko/web/: local_file_inclusion.py
tests/: test_mersenne_twister.py
tests/algo/: test_sudoku.py
tests/crypto/: test_mersenne_twister.py
