[tool.poetry]
name = "neko"
version = "0.1.0"
description = ""
authors = ["minaminao <minaminaoy@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
pycryptodome = "^3.19.0"
z3-solver = "^4.12.2.0"
pwntools = "^4.11.0"

[tool.poetry.scripts]
neko = "neko.__main__:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
ruff = "^0.0.284"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501", # Line too long
]
